--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,9 @@
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
+  /* scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+  scroll-padding: 40px; */
 }
 
 *,
@@ -19,16 +22,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
-  overflow-x: hidden;
   display: block;
-}
-
-main{
-  scroll-snap-type: y mandatory;
-}
-
-.color-scheme {
-  scroll-snap-align: start;
 }
 
 .color-scheme:nth-child(even) {
@@ -49,7 +43,7 @@ a:hover {
 }
 
 .content-wrap {
-  max-width: 800px;
+  max-width: 1000px;
   width: 85%;
   margin: 0 auto;
   padding: 60px 0;
@@ -66,6 +60,100 @@ h3 {
   font-weight: 300;
 }
 
+.flex {
+  display: flex;
+  gap: var(--gap, 1rem);
+}
+
+header img {
+  width: 100px;
+  margin-left: 1rem;
+  transition: 0.5s;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+
+.primary-header {
+  position: fixed;
+  top: 0 !important;
+  left: 0;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  transition: 0.5s;
+  z-index: 9999;
+
+  overflow: hidden;
+}
+
+.social-media-nav {
+ margin-right: 6em;
+}
+
+.social-media-list {
+  list-style: none;
+  display: flex;
+}
+
+.social-media-list li {
+  list-style: none;
+  padding-left: 15px;
+  font-size: medium;
+  font-size: 20px;
+}
+
+.social-media-list a {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+
+.primary-navigation {
+  --gap: 2em;
+  
+  position: fixed;
+  
+  z-index: 10000;
+  inset: 0 0 0 80%;
+
+  flex-direction: column;
+  padding: min(30vh, 10rem) 2rem;
+  min-height: 100vh;
+
+  transform: translateX(100%);
+  transition: transform 350ms ease-out;
+
+  background-color: #FFFFFF;
+  margin-top: 0;
+}
+
+.primary-navigation a {
+  color: #000000;
+}
+
+.primary-navigation[data-visible="true"] {
+  transform: translateX(0%);
+
+}
+
+.mobile-nav-toggle {
+  display: block;
+  position: absolute;
+  z-index: 9999;
+  background-color: transparent;
+  background-image: url('/images/menu_icon.svg');
+  background-repeat: no-repeat;
+  width: 2rem;
+  border:0;
+  aspect-ratio: 1;
+  top:1rem;
+  right: 2rem;
+}
+
+.mobile-nav-toggle[aria-expanded="true"] {
+  background-image: url('/images/menu_icon_close_dark.svg');
+}
+
 
 /*Home Section
 ---------------------------------------*/
@@ -73,8 +161,21 @@ h3 {
   width: 700px;
 }
 
+.home-section {
+  position: relative;
+}
+
+/*Mixes Section
+---------------------------------------*/
+
+
 /*About Me Section
 ---------------------------------------*/
+
+.contact-me-section a {
+  text-decoration: none;
+  color: #000000;
+}
 
 
 /*Responsive
@@ -106,6 +207,12 @@ h3 {
     background: rgba(0, 0, 0, 0.7);
     padding: 1px; 
   }
+
+  .mixes {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 @media screen and (max-width: 699px) {
@@ -114,5 +221,42 @@ h3 {
   }
   .overlapping-grid h3 {
     font-size: 20px;
-  }  
+  }
+  
+  h2 {
+    font-size: 30px;
+  }
+
+  .home-section img {
+    width: 350px;
+  }
+
+  .primary-navigation {
+    inset: 0 0 0 60%;
+  }
+}
+
+/*Animations
+---------------------------------------*/
+
+.sticky {
+  background-color:#FFFFFF;
+}
+
+.sticky a {
+  color: #000000;
+} 
+
+.sticky img {
+  margin-bottom: 0;
+  margin-top: 1;
+  content: url("/images/seanzie_logo_black.png");
+}
+
+.sticky .mobile-nav-toggle {
+  background-image: url('/images/menu_icon_dark.svg');
+}
+
+.sticky .mobile-nav-toggle[aria-expanded="true"] {
+  background-image: url('/images/menu_icon_close_dark.svg');
 }
