--- a/css/styles.css
+++ b/css/styles.css
@@ -178,6 +178,17 @@ header img {
   color: #000000;
 }
 
+/*FOOTER
+---------------------------------------*/
+
+footer {
+  min-height: 10vh;
+  text-align: center;
+}
+
+footer div {
+  margin-top: 5vh;
+}
 
 /*Responsive
 ---------------------------------------*/
